--- a/index.html
+++ b/index.html
@@ -81,7 +81,6 @@
       30% { opacity: 1; }
     }
 
-    /* Estado de error */
     .error-icon {
       font-size: 48px;
       margin-bottom: 24px;
@@ -110,7 +109,6 @@
       background: #b8955a;
     }
 
-    /* Estado de éxito (breve antes de redirigir) */
     .success-icon {
       font-size: 48px;
       margin-bottom: 24px;
@@ -118,24 +116,24 @@
   </style>
 </head>
 <body>
-  <div class="container" id="container">
+  <div class="container">
     <div class="logo">THE TERRACE</div>
 
-    <!-- Estado: cargando (por defecto) -->
+    <!-- Estado: cargando -->
     <div id="loading">
       <div class="spinner"></div>
       <div class="status-text">Preparando tu pago<span class="dots"><span>.</span><span>.</span><span>.</span></span></div>
       <p class="sub-text">Estamos generando tu enlace de pago.<br/>No cierres esta ventana.</p>
     </div>
 
-    <!-- Estado: éxito (se muestra brevemente antes de redirigir) -->
+    <!-- Estado: éxito -->
     <div id="success" style="display: none;">
       <div class="success-icon">✓</div>
       <div class="status-text">¡Listo!</div>
       <p class="sub-text">Te estamos redirigiendo al pago...</p>
     </div>
 
-    <!-- Estado: error / timeout -->
+    <!-- Estado: error -->
     <div id="error" style="display: none;">
       <div class="error-icon">⚠️</div>
       <div class="error-text" id="errorMessage">Algo salió mal</div>
@@ -145,64 +143,59 @@
   </div>
 
   <script>
-    // ============================================================
-    // CONFIGURACIÓN - Cambia estas variables según tu entorno
-    // ============================================================
+    // URL del Apps Script
     const APPS_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbz_c7l3qjoAX9otPNLSz0njlcOY3K5yr8VnTwxS9x4bJdQdo7QYG4mxgEVZqHSt7W0A/exec';
-    // ^ Reemplaza con la URL que te da al desplegar el Apps Script como web app
 
-    const POLLING_INTERVAL = 2500;   // Cada 2.5 segundos consulta
-    const MAX_TIMEOUT = 120000;      // Máximo 2 minutos de espera
-    // ============================================================
+    const POLLING_INTERVAL = 2500;  // Cada 2.5 segundos
+    const MAX_TIMEOUT = 120000;     // Máximo 2 minutos
 
-    // Obtener el email de la URL (ejemplo: ?email=usuario@gmail.com)
     const params = new URLSearchParams(window.location.search);
     const email = params.get('email');
 
     let intentos = 0;
     let polling = null;
+    let timeoutId = null;
 
-    // Si no hay email en la URL, mostrar error inmediatamente
     if (!email) {
       mostrarError('No se detectó un email válido. Por favor, vuelve al formulario.');
     } else {
-      // Iniciar polling
       polling = setInterval(buscarLink, POLLING_INTERVAL);
 
-      // Timeout máximo: si en 2 minutos no aparece el link, parar
-      setTimeout(() => {
+      timeoutId = setTimeout(() => {
         clearInterval(polling);
         mostrarError('El proceso tardó demasiado. Por favor, intenta de nuevo.');
       }, MAX_TIMEOUT);
     }
 
-    async function buscarLink() {
-      try {
-        const response = await fetch(`${APPS_SCRIPT_URL}?email=${encodeURIComponent(email)}`);
-        const data = await response.json();
-
-        if (data.status === 'success' && data.link) {
-          // ¡Se encontró el link! Parar polling y redirigir
-          clearInterval(polling);
-          mostrarExito();
-
-          // Redirigir después de 1.5 segundos para que el usuario vea el mensaje
-          setTimeout(() => {
-            window.location.href = data.link;
-          }, 1500);
-
-        }
-        // Si status es 'pending', no hacer nada, el polling sigue
-
-      } catch (error) {
-        // Si falla una petición, no parar aún, puede ser temporal
+    // Usar JSONP para evitar problemas de CORS con Apps Script
+    function buscarLink() {
+      var script = document.createElement('script');
+      script.src = APPS_SCRIPT_URL + '?email=' + encodeURIComponent(email) + '&callback=handleResponse';
+      script.onerror = function() {
         intentos++;
+        document.head.removeChild(script);
         if (intentos >= 5) {
           clearInterval(polling);
+          clearTimeout(timeoutId);
           mostrarError('No se pudo conectar con el servidor. Por favor, intenta de nuevo.');
         }
-      }
+      };
+      document.head.appendChild(script);
     }
+
+    // Esta función la llama automáticamente el JSONP cuando recibe la respuesta
+    window.handleResponse = function(data) {
+      if (data.status === 'success' && data.link) {
+        clearInterval(polling);
+        clearTimeout(timeoutId);
+        mostrarExito();
+
+        setTimeout(() => {
+          window.location.href = data.link;
+        }, 1500);
+      }
+      // Si es 'pending', no hacer nada, el polling sigue
+    };
 
     function mostrarExito() {
       document.getElementById('loading').style.display = 'none';
